# cs5270-A6

./: README.md  consumer.py  pyproject.toml  test_consumer.py
tests/: test_consumer.py
