[tool.poetry]
name = "a6"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.40.56"
pytest = "^8.4.2"
moto = {extras = ["boto3"], version = "^5.1.15"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
